--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title>Page Title</title>
 </head>
 <body>
-  <p>first paragraph.</p>
+    <p>first paragraph.</p>
+    <h1>This is a Heading</h1>
 </body>
 </html>
